--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@
   padding: 20px;
   background: rgba(255,255,255,0.1);
   border-radius: 10px;
-  color: rgb(238, 8, 8);
+  color: rgb(90, 226, 49);
   white-space: pre-line;
   text-align: left;
   font-size: 18px;
@@ -98,7 +98,7 @@
   }
   .box {
    width: 80%;
-   margin: 100px auto 0 auto;
+   margin: 0 auto;
   }
   .nav-title {
     font-size: 18px;
