--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,7 @@
     width: 95%;
     margin: 100px auto 0 auto;
     padding: auto;
+    margin-right: 10px
   }
   .input {
     font-size: 16px;
