--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,9 @@
     width: 95%;
     margin: 100px auto 0 auto;
     padding: auto;
-    margin-right: 30px;
+    position: fixed;
+    margin-left: 0;
+    margin-right: 0;
   }
   .input {
     font-size: 16px;
