--- a/src/index.css
+++ b/src/index.css
@@ -91,12 +91,11 @@
 }
 
 @media (max-width: 1024px) {
-  boddy{
+  .boddy{
   display: flex;
   justify-content: center; 
   align-items: flex-start;
   margin: 0;
-
   }
   .box {
    width: 80%;
