--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,12 @@
 }
 
 @media (max-width: 768px) {
+   .boddy{
+  display: flex;
+  justify-content: center; 
+  align-items: flex-start;
+  margin: 0;
+  }
   .nav {
     gap: 10px;
     padding: 15px;
