--- a/src/index.css
+++ b/src/index.css
@@ -123,8 +123,10 @@
   margin: 0;
   }
   .nav {
+    position: fixed;
     gap: 10px;
     padding: 15px;
+    
   }
   .nav-logo {
     width: 120px;
